--- a/blogue.html
+++ b/blogue.html
@@ -729,7 +729,7 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-const postsCol = collection(db, "posts");
+const postsCol = collection(db, "devloppement");
 const repliesCol = collection(db, "replies");
 const storage = getStorage(app);  // <-- INIT STORAGE
 
