--- a/creerunposte.html
+++ b/creerunposte.html
@@ -742,100 +742,135 @@
   </div>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import {
-  getFirestore,
-  collection,
-  addDoc,
-  serverTimestamp
-} from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
+  import {
+    getFirestore,
+    collection,
+    addDoc,
+    serverTimestamp
+  } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js";
+  import {
+    getAuth,
+    onAuthStateChanged // <-- Ajout de onAuthStateChanged pour gérer l'état de connexion
+  } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js";
 
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAtjlyHBlRQy_C3HomDXLB39j9lGbLAY_Q",
-      authDomain: "fashionflow-3db6b.firebaseapp.com",
-      projectId: "fashionflow-3db6b",
-      storageBucket: "fashionflow-3db6b.firebasestorage.app",
-      messagingSenderId: "1073693995934",
-      appId: "1:1073693995934:web:9eb28e8f5176faf41edc8f",
-      measurementId: "G-P4DP02HQ75"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyAtjlyHBlRQy_C3HomDXLB39j9lGbLAY_Q",
+    authDomain: "fashionflow-3db6b.firebaseapp.com",
+    projectId: "fashionflow-3db6b",
+    storageBucket: "fashionflow-3db6b.firebasestorage.app",
+    messagingSenderId: "1073693995934",
+    appId: "1:1073693995934:web:9eb28e8f5176faf41edc8f",
+    measurementId: "G-P4DP02HQ75"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const postsCol = collection(db, "devloppement");
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  const auth = getAuth(app); // <-- Initialiser Firebase Auth
+  const postsCol = collection(db, "devloppement");
 
-    const form = document.getElementById("postForm");
-    const themeToggle = document.getElementById("themeToggle");
+  const form = document.getElementById("postForm");
+  const themeToggle = document.getElementById("themeToggle");
 
-    // Gestion des thèmes
-    function initTheme() {
-      const savedTheme = localStorage.getItem('theme') || 'light';
-      setTheme(savedTheme);
+  let currentUser = null; // Variable pour stocker l'utilisateur connecté
+
+  // Écouteur d'état d'authentification
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      currentUser = user;
+      console.log("Utilisateur connecté:", currentUser.displayName || currentUser.email);
+    } else {
+      currentUser = null;
+      console.log("Aucun utilisateur connecté.");
+      // Rediriger vers la page de connexion ou afficher un message
+      showNotification("🚫 Vous devez être connecté pour créer un post.", 5000);
+      setTimeout(() => {
+          window.location.href = "blog.html"; // Redirige vers la page principale
+      }, 3000);
     }
+  });
 
-    function setTheme(theme) {
-      document.documentElement.setAttribute('data-theme', theme);
-      themeToggle.textContent = theme === 'dark' ? '☀️' : '🌙';
-      localStorage.setItem('theme', theme);
-    }
+  // Gestion des thèmes
+  function initTheme() {
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    setTheme(savedTheme);
+  }
 
-    function toggleTheme() {
-      const currentTheme = document.documentElement.getAttribute('data-theme');
-      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-      setTheme(newTheme);
-    }
+  function setTheme(theme) {
+    document.documentElement.setAttribute('data-theme', theme);
+    themeToggle.textContent = theme === 'dark' ? '☀️' : '🌙';
+    localStorage.setItem('theme', theme);
+  }
+
+  function toggleTheme() {
+    const currentTheme = document.documentElement.getAttribute('data-theme');
+    const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+    setTheme(newTheme);
+  }
 
   // Publication des posts
-    async function publishPost(event) {
-      event.preventDefault();
+  async function publishPost(event) {
+    event.preventDefault();
 
-    import { serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js"; // <-- CECI EST MAL PLACÉ ET DUPLIQUÉ
-
-const newPost = {
-  title: form.postTitle.value.trim(),
-  content: form.postContent.value.trim(),
-  tags: form.postTags.value
-    .split(",")
-    .map((tag) => tag.trim())
-    .filter((tag) => tag),
-  category: "general",
-  author: "Admin", // <-- CET AUTEUR "Admin" est codé en dur. Nous voulons l'utilisateur connecté.
-  date: new Date().toISOString(),
-  createdAt: serverTimestamp()  // ✅ C'est ça qu'il faut pour Firestore
-};
-}; // <-- FERMETURE DE LA FONCTION ICI (mauvais endroit)
-
-      try {
-        await addDoc(postsCol, newPost);
-        showNotification("🎉 Post publié avec succès !");
-        form.reset();
-      } catch (error) {
-        showNotification("❌ Erreur lors de la publication : " + error.message);
-      }
-    } // <-- FERMETURE DE LA FONCTION ATTENDUE ICI
-
-      try {
-        await addDoc(postsCol, newPost);
-        showNotification("🎉 Post publié avec succès !");
-        form.reset();
-      } catch (error) {
-        showNotification("❌ Erreur lors de la publication : " + error.message);
-      }
+    if (!currentUser) {
+      showNotification("🚫 Vous devez être connecté pour publier un post.");
+      return; // Empêche la publication si non connecté
     }
 
-    function showNotification(msg) {
-      const notif = document.createElement("div");
-      notif.className = "notification";
-      notif.textContent = msg;
-      document.body.appendChild(notif);
-      setTimeout(() => notif.remove(), 3000);
+    const title = form.postTitle.value.trim();
+    const content = form.postContent.value.trim();
+    const tags = form.postTags.value
+      .split(",")
+      .map((tag) => tag.trim())
+      .filter((tag) => tag);
+
+    if (!title || !content) {
+        showNotification("Veuillez remplir le titre et le contenu du post.");
+        return;
     }
 
-    // Event listeners
-    form.addEventListener("submit", publishPost);
-    themeToggle.addEventListener("click", toggleTheme);
+    const newPost = {
+      title: title,
+      content: content,
+      tags: tags,
+      category: "general",
+      // Utilisation des informations de l'utilisateur connecté
+      author: currentUser.displayName || currentUser.email || 'Utilisateur inconnu',
+      authorUid: currentUser.uid, // Stocke l'UID de l'auteur pour la gestion des droits
+      date: new Date().toISOString(), // Date au format ISO pour un affichage facile
+      createdAt: serverTimestamp() // Horodatage précis de Firestore pour le tri
+    };
 
+    try {
+      await addDoc(postsCol, newPost);
+      showNotification("🎉 Post publié avec succès !");
+      form.reset(); // Réinitialise le formulaire après publication
+      // Optionnel: rediriger l'utilisateur vers la page blog.html après publication
+      // setTimeout(() => {
+      //     window.location.href = "blog.html";
+      // }, 2000);
+    } catch (error) {
+      console.error("Erreur détaillée lors de la publication:", error);
+      showNotification("❌ Erreur lors de la publication : " + error.message);
+    }
+  }
+
+  function showNotification(msg, duration = 3000) { // Ajout d'une durée paramétrable
+    const notif = document.createElement("div");
+    notif.className = "notification";
+    notif.textContent = msg;
+    document.body.appendChild(notif);
+    setTimeout(() => notif.remove(), duration);
+  }
+
+  // Event listeners
+  form.addEventListener("submit", publishPost);
+  themeToggle.addEventListener("click", toggleTheme);
+
+  // Initialisation
+  initTheme();
+</script>
     // Initialisation
     initTheme();
   </script>
