--- a/blog.html
+++ b/blog.html
@@ -927,14 +927,14 @@ import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstati
 
 // Configuration Firebase
 const firebaseConfig = {
-    apiKey: "YOUR_API_KEY", // Remplacez par votre clé API
-    authDomain: "YOUR_AUTH_DOMAIN", // Remplacez par votre domaine d'authentification
-    projectId: "YOUR_PROJECT_ID", // Remplacez par votre ID de projet
-    storageBucket: "YOUR_STORAGE_BUCKET", // Remplacez par votre bucket de stockage
-    messagingSenderId: "YOUR_MESSAGING_SENDER_ID", // Remplacez par votre ID d'expéditeur de messages
-    appId: "YOUR_APP_ID", // Remplacez par votre ID d'application
-    measurementId: "YOUR_MEASUREMENT_ID" // Optionnel
-};
+   apiKey: "AIzaSyAtjlyHBlRQy_C3HomDXLB39j9lGbLAY_Q",
+    authDomain: "fashionflow-3db6b.firebaseapp.com",
+    projectId: "fashionflow-3db6b",
+    storageBucket: "fashionflow-3db6b.firebasestorage.app",
+    messagingSenderId: "1073693995934",
+    appId: "1:1073693995934:web:9eb28e8f5176faf41edc8f",
+    measurementId: "G-P4DP02HQ75"
+  };
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
