--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@ function goToBlogue() {
   const loggedIn = localStorage.getItem('isLoggedIn');
   if (loggedIn === 'true') {
     // L'utilisateur est connecté, on le redirige vers la page renovation
-    window.location.href = "renovation.html";
+    window.location.href = "blog.html";
   } else {
     alert("Connecte-toi avec Google pour accéder au blog !");
     document.getElementById("googleLoginBox").style.display = "block";
