--- a/blog.html
+++ b/blog.html
@@ -2181,12 +2181,16 @@ newPostBtn.addEventListener('click', () => {
         loginModal.style.display = 'flex';
     }
 });
-  // ✅ Faire disparaître l'écran d'accueil
-document.getElementById('discoverBtn').addEventListener('click', function() {
+  document.addEventListener('DOMContentLoaded', () => {
+    const discoverBtn = document.getElementById('discoverBtn');
     const welcomeScreen = document.getElementById('welcomeScreen');
-    if (welcomeScreen) {
-        welcomeScreen.style.display = 'none';  // cache l'écran d'accueil
-    }
-});
 
+    if (discoverBtn && welcomeScreen) {
+      discoverBtn.addEventListener('click', () => {
+        welcomeScreen.style.display = 'none';
+      });
+    } else {
+      console.error('Bouton Découvrir ou welcomeScreen introuvable !');
+    }
+  });
 </script>
