--- a/dex.html
+++ b/dex.html
@@ -1149,7 +1149,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     // Fonctions de navigation
     function goToWiki() {
-      window.location.href = "wiki.html";
+      window.location.href = "maintenance.html";
     }
 
     function goToNews() {
